--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,6 +55,7 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
+    --hover-primary: 270 50% 20%;
   }
 }
 
